@@ -1,3 +1,7 @@
+2014-01-02  Richard Sandiford  <rdsandiford@googlemail.com>
+
+	Update copyright years
+
 2013-12-06  Jakub Jelinek  <jakub@redhat.com>
 
 	* elf.c (ET_DYN): Undefine and define again.
